# mcp-ty

./: README.md  main.py  pyproject.toml
config/: cursor_mcp_example.json
docs/: 参考资料.md
src/mcp_ty/: __init__.py  lsp_client.py  server.py
