[project]
name = "mcp-ty"
version = "0.1.0"
description = "MCP server for semantic Python code analysis powered by ty type checker"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["mcp", "ty", "type-checker", "python", "lsp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-ty = "mcp_ty.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ty"]

[tool.ty]
# ty type checker configuration
python-version = "3.11"
